--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,7 +1,6 @@
 {
 	"version": "2.0.0",
-	"tasks": [
-		{
+	"tasks": [{
 			"label": "clean",
 			"command": "dotnet",
 			"args": [
@@ -59,7 +58,7 @@
 			"type": "func",
 			"dependsOn": "build",
 			"options": {
-				"cwd": "${workspaceFolder}/bin/Debug/netcoreapp3.1"
+				"cwd": "${workspaceFolder}/bin/Debug/net8.0"
 			},
 			"command": "host start",
 			"isBackground": true,
